[package]
name = "fwt"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["walsh", "fast_transform", "hadamard", "discrete_transform", "spectral_analysis"]
categories = ["mathematics", "science"]
repository = "https://github.com/PaulSanchez/fwt.git"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
